[gd_scene load_steps=2 format=3 uid="uid://dunjlie0dfpac"]

[ext_resource type="Script" path="res://scripts/components/hitbox_component.gd" id="1_l8sm4"]

[node name="HitboxComponent" type="Area2D" node_paths=PackedStringArray("hit_timer")]
script = ExtResource("1_l8sm4")
hit_timer = NodePath("HitTimer")

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
